Fixed create metods and exeptions